<resources>
    <string name="app_name">To do list app</string>
    <string name="add_task">Add Task</string>
    <string name="enter_task">Enter task</string>
    <string name="enter_desc">Enter description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="task_description">Task Description</string>
    <string name="task_name">Task Name</string>
    <string name="completed_icon">Completed</string>
    <string name="delete_icon">Delete</string>
    <string name="sort">Sort</string>
    <string name="pick_deadline">Pick deadline</string>
    <string name="reset">Reset</string>
    <string name="sort_deadline">Deadline</string>
</resources>