<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/addTask"
        android:title="@string/add_task"
        android:icon="@drawable/add_task"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/sort"
        android:title="@string/sort"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom">

        <menu>
            <item android:id="@+id/sortByName"
                android:title="@string/task_name" />
            <item android:id="@+id/sortByDeadline"
                android:title="@string/sort_deadline"/>
            <item android:id="@+id/sortByTime"
                android:title="@string/reset"/>
        </menu>

    </item>
</menu>