<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="36dp"
    android:layout_marginEnd="36dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/addTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task" />

        <EditText
            android:id="@+id/newTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_task" />

        <EditText
            android:id="@+id/newDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_desc" />

        <EditText
            android:id="@+id/deadlineInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pick_deadline"
            android:focusable="false"
            android:clickable="true"
            android:drawableEnd="@android:drawable/ic_menu_my_calendar"
            android:paddingEnd="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
